--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 				<h1 class="my-title">Image Search Abstraction Layer</h1>
 				<h2>EXAMPLE</h2>
 				<h3>Image search url:</h3>
-				<div><samp>https://nameless-atoll-44136.herokuapp.com//api/imagesearch/planes?offset=10</samp></div>
+				<div><samp>https://cryptic-anchorage-58074.herokuapp.com/api/imagesearch/planes?offset=10</samp></div>
 				<h3>Output</h3>
 				<div><samp>[{
 
@@ -33,7 +33,7 @@
 
 }, ...]</samp></div>
 				<h3>Latest search terms</h3>
-				<div><samp>https://nameless-atoll-44136.herokuapp.com/api/latest/imagesearch/</samp></div>
+				<div><samp>https://cryptic-anchorage-58074.herokuapp.com/api/latest/imagesearch/</samp></div>
 				<h3>Output</h3>
 				<div><samp>[{
 
